[gd_scene load_steps=7 format=2]

[ext_resource path="res://Graphics/Effects/EnterEffect.tres" type="Animation" id=1]
[ext_resource path="res://Graphics/Effects/StaticShader.tres" type="Material" id=2]
[ext_resource path="res://Graphics/Effects/EnterExitShader.tres" type="Material" id=3]
[ext_resource path="res://Graphics/Effects/NoireShader.tres" type="Material" id=4]
[ext_resource path="res://Graphics/Effects/VignetteShader.tres" type="Material" id=5]
[ext_resource path="res://Scripts/ScreenEffects.gd" type="Script" id=6]

[node name="ScreenEffects" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
input_pass_on_modal_close_click = false
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
useEnterExit = true
noiseScale = 0.125

[node name="EffectAnimator" type="AnimationPlayer" parent="."]
anims/Transition = ExtResource( 1 )

[node name="NoireEffect" type="ColorRect" parent="."]
material = ExtResource( 4 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="StaticEffect" type="ColorRect" parent="."]
material = ExtResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="EnterExitEffect" type="ColorRect" parent="."]
material = ExtResource( 3 )
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="VignetteEffect" type="ColorRect" parent="."]
material = ExtResource( 5 )
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
